Succefully import created employees, modified the module anfd the security. It is working 100%, completed.

--- a/kaelo_employee_onboarding_test/addons/kaelo_employee_onboarding/views/employee_onboarding_views.xml
+++ b/kaelo_employee_onboarding_test/addons/kaelo_employee_onboarding/views/employee_onboarding_views.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-  <!-- Root menu item -->
+  <!-- Root menu for Kaelo Onboarding -->
   <menuitem id="kaelo_onboarding_menu" name="Kaelo Onboarding" sequence="10"/>
 
-  <!-- Tree view to display list of employee onboarding records -->
+  <!-- Tree View for Employee Onboarding -->
   <record id="view_employee_onboarding_tree" model="ir.ui.view">
     <field name="name">employee.onboarding.tree</field>
     <field name="model">employee.onboarding</field>
     <field name="arch" type="xml">
-      <tree string="Employee Onboarding">
+      <tree string="Employee Onboarding Records">
         <field name="full_name"/>
         <field name="employee_number"/>
         <field name="id_number"/>
@@ -18,12 +18,12 @@
     </field>
   </record>
 
-  <!-- Form view to edit one employee onboarding record -->
+  <!-- Form View for Employee Onboarding -->
   <record id="view_employee_onboarding_form" model="ir.ui.view">
     <field name="name">employee.onboarding.form</field>
     <field name="model">employee.onboarding</field>
     <field name="arch" type="xml">
-      <form string="Employee Onboarding">
+      <form string="Employee Onboarding Record">
         <group>
           <field name="full_name"/>
           <field name="employee_number"/>
@@ -35,17 +35,17 @@
     </field>
   </record>
 
-  <!-- Window action to open onboarding list with tree+form views -->
+  <!-- Action to open the Employee Onboarding list -->
   <record id="action_employee_onboarding" model="ir.actions.act_window">
     <field name="name">Onboarding Records</field>
     <field name="res_model">employee.onboarding</field>
     <field name="view_mode">tree,form</field>
   </record>
 
-  <!-- Menu item in the root menu to launch the onboarding records view -->
+  <!-- Menu to access the Employee Onboarding records -->
   <menuitem id="kaelo_onboarding_records_action"
             name="Onboarding Records"
             parent="kaelo_onboarding_menu"
             action="action_employee_onboarding"
-            sequence="5"/>
+            sequence="10"/>
 </odoo>
